lib/brevity/parsing/expression.treetop
module Brevity

grammar Expression
  include Sequence
  include Label
  include DuplicateModifier
  include TransposeModifier
  include StretchModifier
  
  rule expression
    single more:([\s]+ expression)* <ExpressionNode>
  end

  rule single
    modified_expr / plain_expr
  end
  
  rule plain_expr
    grouped_expr / label_expr / sequence
  end
  
  rule modified_expr
    base:(grouped_expr / label_expr) modifiers:modifier+ <ModifiedExprNode>
  end
  
  rule grouped_expr
    "(" [\s]* expression [\s]* ")" <GroupedExprNode>
  end
  
  rule label_expr
    ":" label <LabelExprNode>
  end
  
  rule modifier
    transpose_modifier / duplicate_modifier / stretch_modifier
  end
end

end
